--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "expo-app-loading": "^1.1.2",
     "firebase": "^8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
